# Girt_hunter

./: .env.example  .gitignore  Dockerfile  README-ar.md  README.md  RSD_v2.0.md  config.ini  config.yaml  docker-compose.yml  pyproject.toml
app/core/: banner.py
data/json/: app.json  history.json
locales/: en.yml
scripts/: migrate_history.py
src/: __init__.py  main.py
src/config/: settings.py
src/core/: __init__.py  client.py  monitor.py  purchase.py
src/notifications/: __init__.py  telegram.py
src/observability/: __init__.py  health.py  logging.py  metrics.py
src/storage/: __init__.py  database.py  models.py
tests/: conftest.py  run_tests.py  test_config.py  test_storage.py
